templates/featurehub_template.yaml
---
# Source: featurehub/charts/nats/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.5
    helm.sh/chart: nats-1.1.5
  name: release-name-nats-headless
spec:
  clusterIP: None
  ports:
  - appProtocol: tcp
    name: nats
    port: 4222
    targetPort: nats
  - appProtocol: http
    name: monitor
    port: 8222
    targetPort: monitor
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: nats
---
# Source: featurehub/charts/nats/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.5
    helm.sh/chart: nats-1.1.5
  name: release-name-nats
spec:
  ports:
  - appProtocol: tcp
    name: nats
    port: 4222
    targetPort: nats
  selector:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: nats
---
# Source: featurehub/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: featurehub/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: featurehub/templates/dacha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-featurehub-dacha
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    helm.sh/chart: featurehub-4.1.1
    app.kubernetes.io/name: release-name-featurehub-dacha
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8600
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: release-name-featurehub-dacha
    app.kubernetes.io/instance: release-name
---
# Source: featurehub/templates/edge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-featurehub-edge
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    helm.sh/chart: featurehub-4.1.1
    app.kubernetes.io/name: release-name-featurehub-edge
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8553
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: release-name-featurehub-edge
    app.kubernetes.io/instance: release-name
---
# Source: featurehub/templates/management-repository/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-featurehub-management-repository
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    helm.sh/chart: featurehub-4.1.1
    app.kubernetes.io/name: release-name-featurehub-management-repository
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: http
      protocol: TCP
      name: http
    - port: 8701
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: release-name-featurehub-management-repository
    app.kubernetes.io/instance: release-name
---
# Source: featurehub/charts/nats/templates/nats-box/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: nats-box
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.5
    helm.sh/chart: nats-1.1.5
  name: release-name-nats-box
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: nats-box
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: nats
  template:
    metadata:
      labels:
        app.kubernetes.io/component: nats-box
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nats
        app.kubernetes.io/version: 2.10.5
        helm.sh/chart: nats-1.1.5
    spec:
      containers:
      - args:
        - trap true INT TERM; sleep infinity & wait
        command:
        - sh
        - -ec
        - |
          work_dir="$(pwd)"
          mkdir -p "$XDG_CONFIG_HOME/nats"
          cd "$XDG_CONFIG_HOME/nats"
          if ! [ -s context ]; then
            ln -s /etc/nats-contexts context
          fi
          if ! [ -f context.txt ]; then
            echo -n "default" > context.txt
          fi
          cd "$work_dir"
          exec sh -ec "$0"
        image: natsio/nats-box:0.14.1
        name: nats-box
        volumeMounts:
        - mountPath: /etc/nats-contexts
          name: contexts
      enableServiceLinks: false
      volumes:
      - name: contexts
        secret:
          secretName: release-name-nats-box-contexts
---
# Source: featurehub/templates/dacha/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-featurehub-dacha
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    helm.sh/chart: featurehub-4.1.1
    app.kubernetes.io/name: release-name-featurehub-dacha
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name-featurehub-dacha
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/dacha-env: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/dacha-app-config: 6f476647f5f223d2760f5ff21637c94af416de80918805a4213e0c594e387a31
        checksum/global-common-env: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/global-common-config: 65b365dc126d4380f4e191da84ea322ec246a4af807868cac2af47c9c1a8bd89
        checksum/global-common-config-extra: 74e4ebec0fdd14578088f5fbce175b299e9cc045f55884a95044ed52ed11a807
      labels:
        app.kubernetes.io/name: release-name-featurehub-dacha
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-featurehub-dacha
      securityContext:
        fsGroup: 999
      containers:
        - name: release-name-featurehub-dacha
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          image: "featurehub/dacha2:1.7.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8600
              protocol: TCP
            - name: metrics
              containerPort: 8701
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 1  # we set this to 1 because if the health check fails, it means the cache is compromised
            timeoutSeconds: 3
            httpGet:
              path: /health/liveness
              port: metrics
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 20
            successThreshold: 2
            failureThreshold: 1
            timeoutSeconds: 3
            httpGet:
              path: /health/readiness
              port: metrics
          volumeMounts:
            - name: log4j2-xml
              mountPath: "/etc/common-config/log4j2.xml"
              subPath: "log4j2.xml"
            - mountPath: /etc/common-config/common.properties
              name: common-config
              subPath: common.properties
            - mountPath: /etc/app-config/application.properties
              name: app-config
              subPath: application.properties
          resources:
            {}
      volumes:
        - name: log4j2-xml
          configMap:
            name: release-name-featurehub-global-extra-log4j2-xml
        - name: common-config
          configMap:
            name: release-name-featurehub-global-common-config
            items:
              - key: common.properties
                path: common.properties
        - name: app-config
          configMap:
            name: release-name-featurehub-dacha-app-config
            items:
              - key: application.properties
                path: application.properties
---
# Source: featurehub/templates/edge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-featurehub-edge
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    helm.sh/chart: featurehub-4.1.1
    app.kubernetes.io/name: release-name-featurehub-edge
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name-featurehub-edge
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/edge-env: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/edge-app-config: 80d59271b77063af287c620e5530241d5f57c04e2ad150d85a7307473c4be292
        checksum/global-common-env: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/global-common-config: 65b365dc126d4380f4e191da84ea322ec246a4af807868cac2af47c9c1a8bd89
        checksum/global-common-config-extra: 74e4ebec0fdd14578088f5fbce175b299e9cc045f55884a95044ed52ed11a807
      labels:
        app.kubernetes.io/name: release-name-featurehub-edge
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-featurehub-edge
      securityContext:
        null
      containers:
        - name: release-name-featurehub-edge
          securityContext:
            null
          image: "featurehub/edge:1.7.0"
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 8553
              protocol: TCP
            - name: metrics
              containerPort: 8701
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 2
            timeoutSeconds: 3
            httpGet:
              path: "/health/liveness"
              port: metrics
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 20
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 3
            httpGet:
              path: "/health/readiness"
              port: metrics
          volumeMounts:
            - name: log4j2-xml
              mountPath: "/etc/common-config/log4j2.xml"
              subPath: "log4j2.xml"
            - mountPath: /etc/common-config/common.properties
              name: common-config
              subPath: common.properties
            - mountPath: /etc/app-config/application.properties
              name: app-config
              subPath: application.properties
          resources:
            {}
      volumes:
        - name: log4j2-xml
          configMap:
            name: release-name-featurehub-global-extra-log4j2-xml
        - name: common-config
          configMap:
            name: release-name-featurehub-global-common-config
            items:
              - key: common.properties
                path: common.properties
        - name: app-config
          configMap:
            name: release-name-featurehub-edge-app-config
            items:
              - key: application.properties
                path: application.properties
---
# Source: featurehub/templates/management-repository/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-featurehub-management-repository
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  labels:
    helm.sh/chart: featurehub-4.1.1
    app.kubernetes.io/name: release-name-featurehub-management-repository
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: release-name-featurehub-management-repository
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/management-repository-env: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/management-repository-app-config: c57b10e144c5cc025ebcd18f8f9e3d93ecdb0d29774ddeb449c66f854e720966
        checksum/global-common-env: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/global-common-config: 65b365dc126d4380f4e191da84ea322ec246a4af807868cac2af47c9c1a8bd89
        checksum/global-common-config-extra: 74e4ebec0fdd14578088f5fbce175b299e9cc045f55884a95044ed52ed11a807
      labels:
        app.kubernetes.io/name: release-name-featurehub-management-repository
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-featurehub-management-repository
      containers:
        - name: release-name-featurehub-management-repository
          image: "featurehub/mr:1.7.0"
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 8085
              protocol: TCP
            - name: metrics
              containerPort: 8701
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 2
            timeoutSeconds: 3
            httpGet:
              path: "/health/liveness"
              port: metrics
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 20
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 3
            httpGet:
              path: "/health/readiness"
              port: metrics
          volumeMounts:
            - name: log4j2-xml
              mountPath: "/etc/common-config/log4j2.xml"
              subPath: "log4j2.xml"
            - mountPath: /etc/common-config/common.properties
              name: common-config
              subPath: common.properties
            - mountPath: /etc/app-config/application.properties
              name: app-config
              subPath: application.properties
          resources:
            {}
      volumes:
        - name: log4j2-xml
          configMap:
            name: release-name-featurehub-global-extra-log4j2-xml
        - name: common-config
          configMap:
            name: release-name-featurehub-global-common-config
            items:
              - key: common.properties
                path: common.properties
        - name: app-config
          configMap:
            name: release-name-featurehub-management-repository-app-config
            items:
              - key: application.properties
                path: application.properties
---
# Source: featurehub/charts/nats/templates/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.5
    helm.sh/chart: nats-1.1.5
  name: release-name-nats
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: nats
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: nats
  serviceName: release-name-nats-headless
  template:
    metadata:
      annotations:
        checksum/config: aa684fe8610084d109b8639f0208a224f03f8921d597c349b289b35a6ab1579a
      labels:
        app.kubernetes.io/component: nats
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nats
        app.kubernetes.io/version: 2.10.5
        helm.sh/chart: nats-1.1.5
    spec:
      containers:
      - args:
        - --config
        - /etc/nats-config/nats.conf
        image: nats:2.10.5-alpine
        lifecycle:
          preStop:
            exec:
              command:
              - nats-server
              - -sl=ldm=/var/run/nats/nats.pid
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz?js-enabled-only=true
            port: monitor
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: nats
        ports:
        - containerPort: 4222
          name: nats
        - containerPort: 8222
          name: monitor
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz?js-server-only=true
            port: monitor
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 90
          httpGet:
            path: /healthz
            port: monitor
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/nats-config
          name: config
        - mountPath: /var/run/nats
          name: pid
      - args:
        - -pid
        - /var/run/nats/nats.pid
        - -config
        - /etc/nats-config/nats.conf
        image: natsio/nats-server-config-reloader:0.13.0
        name: reloader
        volumeMounts:
        - mountPath: /var/run/nats
          name: pid
        - mountPath: /etc/nats-config
          name: config
      enableServiceLinks: false
      shareProcessNamespace: true
      volumes:
      - configMap:
          name: release-name-nats-config
        name: config
      - emptyDir: {}
        name: pid
  volumeClaimTemplates: null
---
# Source: featurehub/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.1.13
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: release-name-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-12.1.13
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:15.1.0-debian-11-r30
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: custom-init-scripts
              mountPath: /docker-entrypoint-initdb.d/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: custom-init-scripts
          configMap:
            name: release-name-postgresql-init-scripts
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "128Mi"
---
# Source: featurehub/templates/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: featurehub
  namespace: default
  labels:
spec:
  rules:
    - http:
        paths:
          - path: /features
            pathType: Prefix
            backend:
              service:
                name: "featurehub-edge"
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "featurehub-management-repository"
                port:
                  name: http
---
# Source: featurehub/charts/nats/templates/tests/request-reply.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
  labels:
    app.kubernetes.io/component: test-request-reply
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.5
    helm.sh/chart: nats-1.1.5
  name: release-name-nats-test-request-reply
spec:
  containers:
  - args:
    - nats reply --echo echo & pid="$!"; sleep 1; nats request echo hi > /tmp/resp;
      kill "$pid"; wait; grep -qF hi /tmp/resp
    command:
    - sh
    - -ec
    - |
      work_dir="$(pwd)"
      mkdir -p "$XDG_CONFIG_HOME/nats"
      cd "$XDG_CONFIG_HOME/nats"
      if ! [ -s context ]; then
        ln -s /etc/nats-contexts context
      fi
      if ! [ -f context.txt ]; then
        echo -n "default" > context.txt
      fi
      cd "$work_dir"
      exec sh -ec "$0"
    image: natsio/nats-box:0.14.1
    name: nats-box
    volumeMounts:
    - mountPath: /etc/nats-contexts
      name: contexts
  enableServiceLinks: false
  restartPolicy: Never
  volumes:
  - name: contexts
    secret:
      secretName: release-name-nats-box-contexts
